[build-system]
build-backend = "poetry.core.masonry.api"

requires = [ "poetry-core" ]

[tool.poetry]
name = "peak-converter"
version = "0.0.0"
description = "python wrapper for peak-converter"
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"
include = [ "LICENSE", "bin/*" ]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.ci.dependencies]
requests = "^2.32.3"
pendulum = "^3.0.0"
pathlibutil = "^0.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-random-order = "^1.1.1"

[tool.poetry.scripts]
peak-converter = "peak_converter.converter:main"
peak-version = "peak_converter.version:main"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "explicit"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = [
  "--random-order",
  "--color=yes",
  "-s",
  "--cov=peak_converter",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
]
